--- a/ex017/fundo005.html
+++ b/ex017/fundo005.html
@@ -3,19 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
-            height: 100vh;
+            /*height: 100vh;
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;*/
+
+            /*shorthand - background
+            color > image > position > repeat > [size] > attachment*/
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -26,6 +33,12 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore animi dolores itaque! Voluptates maxime, quod obcaecati tempore eius earum cum, aliquid delectus, dolores accusamus laboriosam nihil eligendi est recusandae nesciunt. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus voluptatibus in odit, repellat alias numquam excepturi iste culpa aut voluptas harum modi iure exercitationem laudantium, deleniti a, accusantium laboriosam sint. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque veritatis deserunt repellendus odio ratione! Rem id deserunt repellendus eaque atque laudantium velit, iusto harum odio distinctio! Quam voluptates culpa laboriosam.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore animi dolores itaque! Voluptates maxime, quod obcaecati tempore eius earum cum, aliquid delectus, dolores accusamus laboriosam nihil eligendi est recusandae nesciunt. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus voluptatibus in odit, repellat alias numquam excepturi iste culpa aut voluptas harum modi iure exercitationem laudantium, deleniti a, accusantium laboriosam sint. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque veritatis deserunt repellendus odio ratione! Rem id deserunt repellendus eaque atque laudantium velit, iusto harum odio distinctio! Quam voluptates culpa laboriosam.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore animi dolores itaque! Voluptates maxime, quod obcaecati tempore eius earum cum, aliquid delectus, dolores accusamus laboriosam nihil eligendi est recusandae nesciunt. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus voluptatibus in odit, repellat alias numquam excepturi iste culpa aut voluptas harum modi iure exercitationem laudantium, deleniti a, accusantium laboriosam sint. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque veritatis deserunt repellendus odio ratione! Rem id deserunt repellendus eaque atque laudantium velit, iusto harum odio distinctio! Quam voluptates culpa laboriosam.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore animi dolores itaque! Voluptates maxime, quod obcaecati tempore eius earum cum, aliquid delectus, dolores accusamus laboriosam nihil eligendi est recusandae nesciunt. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus voluptatibus in odit, repellat alias numquam excepturi iste culpa aut voluptas harum modi iure exercitationem laudantium, deleniti a, accusantium laboriosam sint. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque veritatis deserunt repellendus odio ratione! Rem id deserunt repellendus eaque atque laudantium velit, iusto harum odio distinctio! Quam voluptates culpa laboriosam.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore animi dolores itaque! Voluptates maxime, quod obcaecati tempore eius earum cum, aliquid delectus, dolores accusamus laboriosam nihil eligendi est recusandae nesciunt. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus voluptatibus in odit, repellat alias numquam excepturi iste culpa aut voluptas harum modi iure exercitationem laudantium, deleniti a, accusantium laboriosam sint. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque veritatis deserunt repellendus odio ratione! Rem id deserunt repellendus eaque atque laudantium velit, iusto harum odio distinctio! Quam voluptates culpa laboriosam.</p>
+         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore animi dolores itaque! Voluptates maxime, quod obcaecati tempore eius earum cum, aliquid delectus, dolores accusamus laboriosam nihil eligendi est recusandae nesciunt. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus voluptatibus in odit, repellat alias numquam excepturi iste culpa aut voluptas harum modi iure exercitationem laudantium, deleniti a, accusantium laboriosam sint. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque veritatis deserunt repellendus odio ratione! Rem id deserunt repellendus eaque atque laudantium velit, iusto harum odio distinctio! Quam voluptates culpa laboriosam.</p> 
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore animi dolores itaque! Voluptates maxime, quod obcaecati tempore eius earum cum, aliquid delectus, dolores accusamus laboriosam nihil eligendi est recusandae nesciunt. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus voluptatibus in odit, repellat alias numquam excepturi iste culpa aut voluptas harum modi iure exercitationem laudantium, deleniti a, accusantium laboriosam sint. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque veritatis deserunt repellendus odio ratione! Rem id deserunt repellendus eaque atque laudantium velit, iusto harum odio distinctio! Quam voluptates culpa laboriosam.</p>
     </main>
 </body>
