--- a/desafios/menuresponsivo/index.html
+++ b/desafios/menuresponsivo/index.html
@@ -6,9 +6,10 @@
     <title>menu</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="stylesheet" href="estilos/media-query.css">
 
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
             <h1>meu site</h1>
 
@@ -37,6 +38,17 @@
 
 
     <script>
+
+        function mudouTamanho() {
+           if (window.innerWidth >= 768) {
+            itens.style.display = 'block'
+            }else{
+                itens.style.display = 'none'
+            }
+            
+           
+        }
+
         function clickMenu() {
             if (itens.style.display == 'block') {
                 itens.style.display = 'none'
